@@ -2,6 +2,8 @@
 2.4.13
 - TODO arena patchouli
 - TODO update arena desc
+- Fix Drain crash
+- Sealed item can still put on curios slot
 - Drowned has higher chance to wield trident
 
 2.4.12
